[package]
name = "poisson-diskus"
description = "Poisson disk distribution sampling"
version = "1.0.0-pre.2"
authors = ["Petter Johansson"]
edition = "2018"
license = "BlueOak-1.0.0"
readme = "README.md"
repository = "https://github.com/pjohansson/poisson_diskus"
categories = ["algorithms"]
keywords = ["sampling", "blue-noise"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.3"